# rust-wgpu-gui-example

./: Cargo.toml  README.md  flake.nix  index.html
src/: button.rs  lib.rs  main.rs  rectangle.rs  shader.wgsl  text.rs  text_field.rs
